// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-content-search #render should render default control no props 1`] = `
<gux-content-search>
  <mock:shadow-root>
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
    </div>
  </mock:shadow-root>
  <input type="text">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control no props With placeholder 1`] = `
<gux-content-search>
  <mock:shadow-root>
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
    </div>
  </mock:shadow-root>
  <input placeholder="Search" type="text">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props 1`] = `
<gux-content-search current-match="1" match-count="10">
  <mock:shadow-root>
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="false" class="gux-navigation-panel">
          <span class="gux-navigation-result">
            1 of 10
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input placeholder="Search" type="text" value="Default Search Text">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode 1`] = `
<gux-content-search current-match="10" match-count="10">
  <mock:shadow-root>
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="true" class="gux-navigation-disabled gux-navigation-panel">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            10 of 10
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" disabled="" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" disabled="" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" disabled="" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input disabled="true" placeholder="Search" type="text" value="Search Disabled">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with 1 match 1`] = `
<gux-content-search current-match="1" match-count="1">
  <mock:shadow-root>
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="true" class="gux-navigation-disabled gux-navigation-panel">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            1 of 1
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" disabled="" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" disabled="" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" disabled="" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input disabled="true" placeholder="Search" type="text" value="Search Disabled with 1 match">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with 100000000 match 1`] = `
<gux-content-search current-match="10000" match-count="100000000">
  <mock:shadow-root>
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="true" class="gux-navigation-disabled gux-navigation-panel">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            10,000 of 100,000,000
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" disabled="" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" disabled="" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" disabled="" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input disabled="true" placeholder="Search" type="text" value="Search Disabled with big match">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with long value 1`] = `
<gux-content-search current-match="1" match-count="1">
  <mock:shadow-root>
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="true" class="gux-navigation-disabled gux-navigation-panel">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            1 of 1
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" disabled="" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" disabled="" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" disabled="" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input disabled="true" placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with long value with 100000000 match 1`] = `
<gux-content-search current-match="1100" match-count="100000001">
  <mock:shadow-root>
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="true" class="gux-navigation-disabled gux-navigation-panel">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            1,100 of 100,000,001
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" disabled="" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" disabled="" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" disabled="" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input disabled="true" placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with no match 1`] = `
<gux-content-search current-match="0" match-count="0">
  <mock:shadow-root>
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="true" class="gux-navigation-disabled gux-navigation-panel">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            0 of 0
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" disabled="" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" disabled="" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" disabled="" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input disabled="true" placeholder="Search" type="text" value="Search Disabled with no Match">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with invalid  match count 1`] = `
<gux-content-search current-match="1000" match-count="abc">
  <mock:shadow-root>
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="true" class="gux-navigation-disabled gux-navigation-panel">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            0 of 0
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" disabled="" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" disabled="" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" disabled="" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with invalid current match 1`] = `
<gux-content-search current-match="100000" match-count="100">
  <mock:shadow-root>
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="false" class="gux-navigation-panel">
          <span class="gux-navigation-result">
            0 of 100
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with long text 1 match 1`] = `
<gux-content-search current-match="1" match-count="1">
  <mock:shadow-root>
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="false" class="gux-navigation-panel">
          <span class="gux-navigation-result">
            1 of 1
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with long text 100000 match 1`] = `
<gux-content-search current-match="1000" match-count="100000">
  <mock:shadow-root>
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="false" class="gux-navigation-panel">
          <span class="gux-navigation-result">
            1,000 of 100,000
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with long text no match 1`] = `
<gux-content-search current-match="0" match-count="0">
  <mock:shadow-root>
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="true" class="gux-navigation-disabled gux-navigation-panel">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            0 of 0
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" disabled="" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" disabled="" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" disabled="" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with no match 1`] = `
<gux-content-search current-match="0" match-count="0">
  <mock:shadow-root>
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="true" class="gux-navigation-disabled gux-navigation-panel">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            0 of 0
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" disabled="" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" disabled="" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" disabled="" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input placeholder="Search" type="text" value="Default Search Text">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with short text 100000 match 1`] = `
<gux-content-search current-match="1000" match-count="100000">
  <mock:shadow-root>
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon decorative="" icon-name="search"></gux-icon>
      </div>
      <slot></slot>
      <div class="gux-content-control-panel">
        <div aria-disabled="false" class="gux-navigation-panel">
          <span class="gux-navigation-result">
            1,000 of 100,000
          </span>
          <div class="gux-navigation-buttons">
            <button aria-label="Highlight previous match" class="gux-previous-button" title="Highlight previous match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-up"></gux-icon>
            </button>
            <button aria-label="Highlight next match" class="gux-next-button" title="Highlight next match" type="button">
              <gux-icon decorative="" icon-name="arrow-solid-down"></gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider"></div>
        </div>
        <button class="gux-clear-button" tabindex="-1" title="Clear" type="button">
          <gux-icon decorative="" icon-name="close"></gux-icon>
        </button>
      </div>
    </div>
  </mock:shadow-root>
  <input placeholder="Search" type="text" value="Lorem ipsum dolor ">
</gux-content-search>
`;
